--- a/style.css
+++ b/style.css
@@ -1,11 +1,37 @@
 .container{
     display: grid;
-    max-width: 500px;
-    min-height: 500px;
-    background-color: gray;
+    min-width: 700px;
+    min-height: 700px;
+    border: 2px solid black;
     flex-direction: row;
 }
 .square{
-    background-color: red;
+    box-sizing: border-box;
+    background-color: white;
+    /* border: 1px solid black; */
     margin: 0;
+    transition: all 0.3s ease-in;
+    
+}
+body,html{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+button{
+    margin-bottom: 30px;
+    padding: 20px;
+    background-color: beige;
+    border: 2px solid black;
+    border-radius: 6px;
+}
+input{
+    margin-bottom: 20px;
+    height: 40px;
+    width: 100px;
+    font-size: 35px;
+    text-align: center;
 }
